Enable searching by ID in search.

--- a/src/AdminWeb/src/app/components/lookups/channel-lookup/channel-lookup.component.html
+++ b/src/AdminWeb/src/app/components/lookups/channel-lookup/channel-lookup.component.html
@@ -6,6 +6,7 @@
     bindLabel="name"
     bindValue="id"
     [formControl]="formControl"
+    [searchFn]="channelSearch"
   >
     <ng-template ng-option-tmp let-item="item" let-search="searchTerm">
       <div>
