--- a/src/AdminWeb/src/app/views/auditlog/auditlog-list/advanced-filters/message-deleted-search/message-deleted-search.component.html
+++ b/src/AdminWeb/src/app/views/auditlog/auditlog-list/advanced-filters/message-deleted-search/message-deleted-search.component.html
@@ -11,7 +11,7 @@
       </c-row>
 
       <c-row>
-        <c-col>
+        <c-col md="6">
           <label cLabel for="contentContains">Text obashuje</label>
           <input
             cFormControl
@@ -21,7 +21,7 @@
           />
         </c-col>
 
-        <c-col class="d-flex align-items-end">
+        <c-col md="6" class="d-flex align-items-end">
           <p-triStateCheckbox
             inputId="containsEmbed"
             formControlName="containsEmbed"
