--- a/src/AdminWeb/src/app/views/auditlog/auditlog-list/advanced-filters/text-search/text-search.component.html
+++ b/src/AdminWeb/src/app/views/auditlog/auditlog-list/advanced-filters/text-search/text-search.component.html
@@ -4,12 +4,12 @@
 
     <form [formGroup]="form">
       <c-row>
-        <c-col>
+        <c-col md="4">
           <label cLabel for="text">Obsah</label>
           <input cFormControl sizing="sm" type="text" formControlName="text" />
         </c-col>
 
-        <c-col>
+        <c-col md="4">
           <label cLabel for="sourceAppName">Aplikace</label>
           <input
             cFormControl
@@ -19,7 +19,7 @@
           />
         </c-col>
 
-        <c-col>
+        <c-col md="4">
           <label cLabel for="source">Zdroj</label>
           <input
             cFormControl
