--- a/src/AdminWeb/src/app/views/auditlog/auditlog-detail/auditlog-detail.component.html
+++ b/src/AdminWeb/src/app/views/auditlog/auditlog-detail/auditlog-detail.component.html
@@ -185,6 +185,13 @@
             [ngTemplateOutletContext]="{ data }"
           />
         }
+
+        @case (15) {
+          <ng-container
+            [ngTemplateOutlet]="guildUpdated"
+            [ngTemplateOutletContext]="{ data }"
+          />
+        }
       }
     </tbody>
   </table>
@@ -397,6 +404,407 @@
           [label]="''"
           [formControl]="data.pointsDeactivated.after | asReadonlyFormControl"
         />
+      </td>
+    </tr>
+  }
+</ng-template>
+
+<ng-template #guildUpdated let-data="data">
+  @if (
+    data.defaultMessageNotifications &&
+    data.defaultMessageNotifications.before !=
+      data.defaultMessageNotifications.after
+  ) {
+    <tr>
+      <th>Výchozí upozornění</th>
+      <td>
+        @switch (data.defaultMessageNotifications.before) {
+          @case (0) {
+            Všechny zprávy
+          }
+
+          @case (1) {
+            Pouze označení
+          }
+        }
+      </td>
+      <td>
+        @switch (data.defaultMessageNotifications.after) {
+          @case (0) {
+            Všechny zprávy
+          }
+
+          @case (1) {
+            Pouze označení
+          }
+        }
+      </td>
+    </tr>
+  }
+
+  @if (data.description && data.description.before != data.description.after) {
+    <tr>
+      <th>Popis</th>
+      <td>{{ data.description.before }}</td>
+      <td>{{ data.description.after }}</td>
+    </tr>
+  }
+
+  @if (data.vanityUrl && data.vanityUrl.before != data.vanityUrl.after) {
+    <tr>
+      <th>Vanity URL</th>
+      <td>{{ data.vanityUrl.before }}</td>
+      <td>{{ data.vanityUrl.after }}</td>
+    </tr>
+  }
+
+  @if (data.bannerId && data.bannerId.before != data.bannerId.after) {
+    <tr>
+      <th>Banner ID</th>
+      <td>{{ data.bannerId.before }}</td>
+      <td>{{ data.bannerId.after }}</td>
+    </tr>
+  }
+
+  @if (
+    data.discoverySplashId &&
+    data.discoverySplashId.before != data.discoverySplashId.after
+  ) {
+    <tr>
+      <th>ID komunitního pozadí</th>
+      <td>{{ data.discoverySplashId.before }}</td>
+      <td>{{ data.discoverySplashId.after }}</td>
+    </tr>
+  }
+
+  @if (data.splashId && data.splashId.before != data.splashId.after) {
+    <tr>
+      <th>ID pozadí pozvánky</th>
+      <td>{{ data.splashId.before }}</td>
+      <td>{{ data.splashId.after }}</td>
+    </tr>
+  }
+
+  @if (data.iconId && data.iconId.before != data.iconId.after) {
+    <tr>
+      <th>ID ikony</th>
+      <td>{{ data.iconId.before }}</td>
+      <td>{{ data.iconId.after }}</td>
+    </tr>
+  }
+
+  @if (data.iconData && (data.iconData.before || data.iconData.after)) {
+    <tr>
+      <th>Ikona</th>
+      <td>
+        @if (data.iconData.before) {
+          <img
+            [src]="'data:image/png;base64, ' + data.iconData.before"
+            alt="GuildUpdated-Icon-Before"
+          />
+        }
+      </td>
+      <td>
+        @if (data.iconData.after) {
+          <img
+            [src]="'data:image/png;base64, ' + data.iconData.after"
+            alt="GuildUpdated-Icon-After"
+          />
+        }
+      </td>
+    </tr>
+  }
+
+  @if (
+    data.publicUpdatesChannelId &&
+    data.publicUpdatesChannelId.before != data.publicUpdatesChannelId.after
+  ) {
+    <tr>
+      <th>Kanál na novinky</th>
+      <td>
+        @if (data.publicUpdatesChannelId.before) {
+          {{ data.publicUpdatesChannelId.before | channelLookup | async }}
+        }
+      </td>
+      <td>
+        @if (data.publicUpdatesChannelId.after) {
+          {{ data.publicUpdatesChannelId.after | channelLookup | async }}
+        }
+      </td>
+    </tr>
+  }
+
+  @if (
+    data.rulesChannelId &&
+    data.rulesChannelId.before != data.rulesChannelId.after
+  ) {
+    <tr>
+      <th>Kanál s pravidly</th>
+      <td>
+        @if (data.rulesChannelId.before) {
+          {{ data.rulesChannelId.before | channelLookup | async }}
+        }
+      </td>
+      <td>
+        @if (data.rulesChannelId.after) {
+          {{ data.rulesChannelId.after | channelLookup | async }}
+        }
+      </td>
+    </tr>
+  }
+
+  @if (
+    data.systemChannelId &&
+    data.systemChannelId.before != data.systemChannelId.after
+  ) {
+    <tr>
+      <th>Systémový kanál</th>
+      <td>
+        @if (data.systemChannelId.before) {
+          {{ data.systemChannelId.before | channelLookup | async }}
+        }
+      </td>
+      <td>
+        @if (data.systemChannelId.after) {
+          {{ data.systemChannelId.after | channelLookup | async }}
+        }
+      </td>
+    </tr>
+  }
+
+  @if (
+    data.afkChannelId && data.afkChannelId.before != data.afkChannelId.after
+  ) {
+    <tr>
+      <th>AFK kanál</th>
+      <td>
+        @if (data.afkChannelId.before) {
+          {{ data.afkChannelId.before | channelLookup | async }}
+        }
+      </td>
+      <td>
+        @if (data.afkChannelId.after) {
+          {{ data.afkChannelId.after | channelLookup | async }}
+        }
+      </td>
+    </tr>
+  }
+
+  @if (data.afkTimeout && data.afkTimeout.before != data.afkTimeout.after) {
+    <tr>
+      <th>AFK timeout</th>
+      <td>
+        @if (data.afkTimeout.before) {
+          {{ data.afkTimeout.before * 1000 | timespan }}
+        }
+      </td>
+      <td>
+        @if (data.afkTimeout.after) {
+          {{ data.afkTimeout.after * 1000 | timespan }}
+        }
+      </td>
+    </tr>
+  }
+
+  @if (data.name && data.name.before != data.name.after) {
+    <tr>
+      <th>Název</th>
+      <td>{{ data.name.before }}</td>
+      <td>{{ data.name.after }}</td>
+    </tr>
+  }
+
+  @if (data.mfaLevel && data.mfaLevel.before != data.mfaLevel.after) {
+    <tr>
+      <th>2FA úroveň</th>
+      <td>
+        <app-checkbox
+          [checkboxId]="'mfaLevelBefore'"
+          [label]="''"
+          [formControl]="data.mfaLevel.before == 1 | asReadonlyFormControl"
+        />
+      </td>
+      <td>
+        <app-checkbox
+          [checkboxId]="'mfaLevelAfter'"
+          [label]="''"
+          [formControl]="data.mfaLevel.after == 1 | asReadonlyFormControl"
+        />
+      </td>
+    </tr>
+  }
+
+  @if (
+    data.verificationLevel &&
+    data.verificationLevel.before != data.verificationLevel.after
+  ) {
+    <tr>
+      <th>Úroveň ověření</th>
+      <td>
+        @switch (data.verificationLevel.before) {
+          @case (0) {
+            Žádná
+          }
+          @case (1) {
+            Nízká
+          }
+          @case (2) {
+            Střední
+          }
+          @case (3) {
+            Vysoká
+          }
+          @case (4) {
+            Extrémní
+          }
+        }
+      </td>
+      <td>
+        @switch (data.verificationLevel.after) {
+          @case (0) {
+            Žádná
+          }
+          @case (1) {
+            Nízká
+          }
+          @case (2) {
+            Střední
+          }
+          @case (3) {
+            Vysoká
+          }
+          @case (4) {
+            Extrémní
+          }
+        }
+      </td>
+    </tr>
+  }
+
+  @if (
+    data.explicitContentFilter &&
+    data.explicitContentFilter.before != data.explicitContentFilter.after
+  ) {
+    <tr>
+      <th>Filtr explicitního obsahu</th>
+      <td>
+        @switch (data.explicitContentFilter.before) {
+          @case (0) {
+            Vypnuto
+          }
+          @case (1) {
+            Uživatelé bez rolí
+          }
+          @case (2) {
+            Všichni uživatelé
+          }
+        }
+      </td>
+      <td>
+        @switch (data.explicitContentFilter.after) {
+          @case (0) {
+            Vypnuto
+          }
+          @case (1) {
+            Uživatelé bez rolí
+          }
+          @case (2) {
+            Všichni uživatelé
+          }
+        }
+      </td>
+    </tr>
+  }
+
+  @if (data.features && data.features.before != data.features.after) {
+    <tr>
+      <th>Funkcionalita</th>
+      <td>
+        {{ data.features.before }} ({{
+          data.features.before | asBitmaskString: 64
+        }})
+      </td>
+      <td>
+        {{ data.features.after }} ({{
+          data.features.after | asBitmaskString: 64
+        }})
+      </td>
+    </tr>
+  }
+
+  @if (data.premiumTier && data.premiumTier.before != data.premiumTier.after) {
+    <tr>
+      <th>Úroveň vylepšení</th>
+      <td>
+        @if (data.premiumTier.before === 0) {
+          Žádná úroveň
+        } @else {
+          Tier{{ data.premiumTier.before }}
+        }
+      </td>
+      <td>
+        @if (data.premiumTier.after === 0) {
+          Žádná úroveň
+        } @else {
+          Tier{{ data.premiumTier.after }}
+        }
+      </td>
+    </tr>
+  }
+
+  @if (
+    data.systemChannelFlags &&
+    data.systemChannelFlags.before != data.systemChannelFlags.after
+  ) {
+    <tr>
+      <th>Nastavení systémového kanálu</th>
+      <td>
+        {{ data.systemChannelFlags.before }} ({{
+          data.systemChannelFlags.before | asBitmaskString: 64
+        }})
+      </td>
+      <td>
+        {{ data.systemChannelFlags.after }} ({{
+          data.systemChannelFlags.after | asBitmaskString: 64
+        }})
+      </td>
+    </tr>
+  }
+
+  @if (data.nsfwLevel && data.nsfwLevel.before != data.nsfwLevel.after) {
+    <tr>
+      <th>Úroveň NSFW</th>
+      <td>
+        @switch (data.nsfwLevel.before) {
+          @case (0) {
+            Výchozí
+          }
+          @case (1) {
+            Explicitní
+          }
+          @case (2) {
+            Bezpečný
+          }
+          @case (3) {
+            Věkově omezený
+          }
+        }
+      </td>
+      <td>
+        @switch (data.nsfwLevel.after) {
+          @case (0) {
+            Výchozí
+          }
+          @case (1) {
+            Explicitní
+          }
+          @case (2) {
+            Bezpečný
+          }
+          @case (3) {
+            Věkově omezený
+          }
+        }
       </td>
     </tr>
   }
