--- a/src/AdminWeb/src/app/views/auditlog/auditlog-detail/auditlog-detail.component.html
+++ b/src/AdminWeb/src/app/views/auditlog/auditlog-detail/auditlog-detail.component.html
@@ -135,6 +135,13 @@
               }"
             />
           }
+
+          @if (response.value.type === 19) {
+            <ng-container
+              [ngTemplateOutlet]="messageDeleted"
+              [ngTemplateOutletContext]="{ data: response.value.data }"
+            />
+          }
         }
       }
     </c-card-body>
@@ -181,14 +188,21 @@
 
         @case (13) {
           <ng-container
-            [ngTemplateOutlet]="memberUpdated"
+            [ngTemplateOutlet]="memberUpdatedDiff"
             [ngTemplateOutletContext]="{ data }"
           />
         }
 
         @case (15) {
           <ng-container
-            [ngTemplateOutlet]="guildUpdated"
+            [ngTemplateOutlet]="guildUpdatedDiff"
+            [ngTemplateOutletContext]="{ data }"
+          />
+        }
+
+        @case (24) {
+          <ng-container
+            [ngTemplateOutlet]="threadUpdatedDiff"
             [ngTemplateOutletContext]="{ data }"
           />
         }
@@ -272,7 +286,7 @@
 </ng-template>
 
 <ng-template #overwriteUpdatedDiff let-data="data">
-  @if (data.allow && data.allow.before?.length != data.allow.after?.length) {
+  @if (data.allow) {
     <tr>
       <th>Povolené oprávnění</th>
       <td>
@@ -292,7 +306,7 @@
     </tr>
   }
 
-  @if (data.deny && data.deny.before?.length != data.deny.after?.length) {
+  @if (data.deny) {
     <tr>
       <th>Zakázané oprávnění</th>
       <td>
@@ -313,7 +327,7 @@
   }
 </ng-template>
 
-<ng-template #memberUpdated let-data="data">
+<ng-template #memberUpdatedDiff let-data="data">
   @if (data.nickname && data.nickname.before != data.nickname.after) {
     <tr>
       <th>Přezdívka</th>
@@ -409,7 +423,7 @@
   }
 </ng-template>
 
-<ng-template #guildUpdated let-data="data">
+<ng-template #guildUpdatedDiff let-data="data">
   @if (
     data.defaultMessageNotifications &&
     data.defaultMessageNotifications.before !=
@@ -808,4 +822,109 @@
       </td>
     </tr>
   }
+</ng-template>
+
+<ng-template #threadUpdatedDiff let-data="data">
+  @if (data.tags) {
+    <tr>
+      <th>Tagy</th>
+      <td>
+        <ul class="m-0">
+          @for (tag of data.tags.before; track $index) {
+            <li>{{ tag }}</li>
+          }
+        </ul>
+      </td>
+      <td>
+        <ul class="m-0">
+          @for (tag of data.tags.after; track $index) {
+            <li>{{ tag }}</li>
+          }
+        </ul>
+      </td>
+    </tr>
+  }
+</ng-template>
+
+<ng-template #messageDeleted let-data="data">
+  <app-info-row key="Autor" [value]="data.authorId | userLookup | async" />
+
+  <app-info-row
+    key="Zpráva vytvořena"
+    [value]="data.messageCreatedAt | localeDatePipe"
+  />
+
+  @if (data.content && data.content.length > 0) {
+    <c-alert color="secondary" class="mt-2 mb-0">
+      <pre class="m-0">{{ data.content }}</pre>
+    </c-alert>
+  }
+
+  @if (data.embeds && data.embeds.length > 0) {
+    <div class="mt-2">
+      @for (embed of data.embeds; track $index) {
+        <ng-container
+          [ngTemplateOutlet]="embedCard"
+          [ngTemplateOutletContext]="{ data: embed }"
+        />
+      }
+    </div>
+  }
+</ng-template>
+
+<ng-template #embedCard let-data="data">
+  <c-card>
+    <c-card-body>
+      @if (data.title) {
+        <app-info-row key="Titulek" [value]="data.title" />
+      }
+
+      <app-info-row key="Typ" [value]="data.type" />
+
+      @if (data.imageInfo) {
+        <app-info-row key="Obrázek" [value]="data.imageInfo" />
+      }
+
+      @if (data.videoInfo) {
+        <app-info-row key="Video" [value]="data.videoInfo" />
+      }
+
+      @if (data.authorName) {
+        <app-info-row key="Autor" [value]="data.authorName" />
+      }
+
+      @if (data.providerName) {
+        <app-info-row key="Provider" [value]="data.providerName" />
+      }
+
+      @if (data.thumbnailInfo) {
+        <app-info-row key="Thumbnail" [value]="data.thumbnailInfo" />
+      }
+
+      <div class="mt-2 mb-2">
+        <app-checkbox
+          [checkboxId]="'containsFooter'"
+          [label]="'Obsahuje patičku'"
+          [formControl]="data.containsFooter | asReadonlyFormControl"
+        />
+      </div>
+
+      @for (field of data.fields; track $index) {
+        <c-card class="mb-2">
+          <c-card-body>
+            <app-info-row key="Název" [value]="field.name" />
+            <app-info-row key="Hodnota" [value]="field.value" />
+
+            <div class="mt-2">
+              <app-checkbox
+                [checkboxId]="'Inline'"
+                [label]="'Inline'"
+                [formControl]="field.inline | asReadonlyFormControl"
+              />
+            </div>
+          </c-card-body>
+        </c-card>
+      }
+    </c-card-body>
+  </c-card>
 </ng-template>
